--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,9 +1,22 @@
 body {
-  padding: 0;
-  margin: 0;
+padding: 0;
+margin: 0;
 }
 
 html, body, #map {
   height: 100%;
   width: 100%;
+}
+
+.my-custom-control {
+  padding:5px 10px;
+  background: rgba(0,0,0,0.5);
+  color: #fff;
+  font-size: 11px;
+  line-height: 18px;
+  border-radius: 5px;
+}
+
+.my-custom-control:empty {
+  display: none;
 }
